# readgmsh

./: CMakeLists.txt  GmshLem  centroid.cpp  cube.msh  main.cc  main.cpp  tetrahedron.cpp  tetrahedron.h
include/: Nodes.h  read_mesh_file.h  tetrahedron.h  tetrahedron.tcc
src/: Nodes.cpp  main.cc  read_mesh_file.cc  tetrahedron.cc
